# OpenAGI

./: .env.example  .gitattributes  .gitignore  CC-BY-NC-SA-4.0.txt  CONTRIBUTE.md  LICENSE  README.md  Restormer License.md  agi_utils.py  backbone_finetune.py  combine_model_seq.py  contribute.md  demo.ipynb  flan_t5_finetune.py  general_dataset.py  generate_model_seq.py  index.html  openagi_benchmark.py  openagi_opentask.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_openagi.sh  setup.py  tools.md  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 001-report-bug.yml  002-feature-request.yml
.github/workflows/: ci.yml  publish.yml
.ipynb_checkpoints/: demo-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
benchmark_tasks/: combine_model_seq.py  demo.ipynb  general_dataset.py  generate_model_seq_llama.py
benchmark_tasks/.ipynb_checkpoints/: agi_utils-checkpoint.py
benchmark_tasks/few_shot/: few_shot_schema-claude.ipynb  few_shot_schema-gpt.ipynb  few_shot_schema-gpt4.ipynb  few_shot_schema-llama.ipynb  few_shot_schema-llama2.ipynb  few_shot_schema-t5.ipynb  few_shot_schema_llama.py
benchmark_tasks/finetune/: finetune_schema-t5.ipynb  generate_parallel_trie_llama.py  generate_tree_structure_t5.py  generate_trie.py  llama_finetune.py
benchmark_tasks/rltf/: rltf_schema-lora-llama2.ipynb  rltf_schema-lora-t5-constraint.ipynb  rltf_schema-lora-vicuna-constraint.ipynb  rltf_schema-t5.ipynb
benchmark_tasks/zero_shot/: zero_shot_schema-claude.ipynb  zero_shot_schema-gpt.ipynb  zero_shot_schema-gpt4.ipynb  zero_shot_schema-llama2.ipynb
data/: data_augmentation.py  data_utils.py
few_shot/: few_shot_schema-gpt.ipynb  few_shot_schema-llama.ipynb  few_shot_schema-t5.ipynb
few_shot/.ipynb_checkpoints/: few_shot_schema-gpt-checkpoint.ipynb  few_shot_schema-llama-checkpoint.ipynb  few_shot_schema-t5-checkpoint.ipynb
finetune/: finetune_schema-t5.ipynb  flan_t5_finetune.py  generate_trie.py  train_task_description.txt
github_models/Restormer/: INSTALL.md  demo.py  setup.py  train.sh
open_tasks/tools/: customized_tools.py
openagi/tests/: test_agent_creation.py  test_core.py  test_llms.py  test_tools.py  test_top_series.py
pyopenagi/: README.md
pyopenagi/agents/: README.md  agent_factory.py  agent_process.py  base.py  base_agent.py  interact.py  react_agent.py
pyopenagi/queues/: README.md  base_queue.py  llm_request_queue.py
pyopenagi/tests/: test_agent_creation.py
pyopenagi/tools/: README.md  base.py
pyopenagi/utils/: README.md  logger.py  (+2 more)
research/: openagi_benchmark.py  openagi_opentask.py  requirements.txt
rltf/: rltf_schema-t5.ipynb
tests/: README.md  test_agent_creation.py
zero_shot/: zero_shot_schema-gpt.ipynb
(+227 files in other folders)
