[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]

dynamic = ["dependencies"]

description = "OpenAGI: Package for AI Agent Creation"
keywords = ["llm", "agi"]
license = {file = "LICENSE"}

name = "pyopenagi"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.10"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/agiresearch/OpenAGI"
Repository = "https://github.com/agiresearch/OpenAGI.git"
"Tools Docs" = "https://github.com/agiresearch/OpenAGI/tools.md"


[tool.hatch.build]
exclude = ["research/", "pyopenagi.egg-info/", "dist", "__pycache__/", ".pytest_cache/"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["pyopenagi"]
